- Various bug fixes - DPI aware - Added current screen mode (CTRL + ALT + printscreen) - Added current screen working area mode (CTRL + SHIFT + printscreen) - screenshots are saved with current screen DPI

--- a/GabScreenshot/app.config
+++ b/GabScreenshot/app.config
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="GabScreenshot.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <system.diagnostics>
         <sources>
-            <!-- This section defines the logging configuration for My.Application.Log -->
+            <!-- Cette section définit la configuration de l'enregistrement dans le fichier journal de My.Application.Log -->
             <source name="DefaultSource" switchName="DefaultSwitch">
                 <listeners>
                     <add name="FileLog"/>
-                    <!-- Uncomment the below section to write to the Application Event Log -->
+                    <!-- Supprimez les marques de commentaire dans la section suivante pour écrire dans le journal des événements de l'application -->
                     <!--<add name="EventLog"/>-->
                 </listeners>
             </source>
@@ -21,34 +21,38 @@
         </switches>
         <sharedListeners>
             <add name="FileLog"
-                 type="Microsoft.VisualBasic.Logging.FileLogTraceListener, Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL"
+                 type="Microsoft.VisualBasic.Logging.FileLogTraceListener, Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" 
                  initializeData="FileLogWriter"/>
-            <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
+            <!-- Supprimez les marques de commentaire dans la section suivante et remplacez APPLICATION_NAME par le nom de votre application à écrire dans le journal des événements de l'application -->
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
+    <appSettings>
+        <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+        <add key="ClientSettingsProvider.ServiceUri" value="" />
+    </appSettings>
     <userSettings>
         <GabScreenshot.My.MySettings>
             <setting name="GS_Setting_SavePath" serializeAs="String">
-                <value />
+              <value />
             </setting>
             <setting name="GS_Setting_FileType" serializeAs="String">
-                <value>Png</value>
+              <value>Png</value>
             </setting>
             <setting name="GS_Setting_ShowTooltip" serializeAs="String">
-                <value>True</value>
+              <value>True</value>
             </setting>
             <setting name="GS_Setting_Opacity" serializeAs="String">
-                <value>0.5</value>
+              <value>0.5</value>
             </setting>
             <setting name="GS_Setting_LoadOnStartup" serializeAs="String">
-                <value>False</value>
+              <value>False</value>
             </setting>
             <setting name="GS_Setting_FilenamePrefix" serializeAs="String">
-                <value>S</value>
+              <value>S</value>
             </setting>
             <setting name="GS_Setting_PadLeft" serializeAs="String">
-                <value>5</value>
+              <value>5</value>
             </setting>
         </GabScreenshot.My.MySettings>
     </userSettings>
