- Multi screen support (use TAB or SPACE to switch between screens) - Corrected selecting to screen corner was not saving screenshot - Added help menu with keyboard shortcuts

--- a/GabScreenshot/app.config
+++ b/GabScreenshot/app.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="GabScreenshot.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="GabScreenshot.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <system.diagnostics>
@@ -17,24 +17,22 @@
             </source>
         </sources>
         <switches>
-            <add name="DefaultSwitch" value="Information" />
+            <add name="DefaultSwitch" value="Information"/>
         </switches>
         <sharedListeners>
-            <add name="FileLog"
-                 type="Microsoft.VisualBasic.Logging.FileLogTraceListener, Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" 
-                 initializeData="FileLogWriter"/>
+            <add name="FileLog" type="Microsoft.VisualBasic.Logging.FileLogTraceListener, Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" initializeData="FileLogWriter"/>
             <!-- Supprimez les marques de commentaire dans la section suivante et remplacez APPLICATION_NAME par le nom de votre application à écrire dans le journal des événements de l'application -->
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
     <appSettings>
-        <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
-        <add key="ClientSettingsProvider.ServiceUri" value="" />
+        <add key="EnableWindowsFormsHighDpiAutoResizing" value="true"/>
+        <add key="ClientSettingsProvider.ServiceUri" value=""/>
     </appSettings>
     <userSettings>
         <GabScreenshot.My.MySettings>
             <setting name="GS_Setting_SavePath" serializeAs="String">
-              <value />
+              <value/>
             </setting>
             <setting name="GS_Setting_FileType" serializeAs="String">
               <value>Png</value>
@@ -56,4 +54,4 @@
             </setting>
         </GabScreenshot.My.MySettings>
     </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
